--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
-baseURL = "http://example.org/"
+baseURL = "https://aaltomcc.github.io/cs-ej4101-fall-2019-035-advanced/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "cs-ej4101-fall-2019-035-advanced"
+disableKinds = ["taxonomy", "taxonomyTerm"]
+theme = "hugo-kiera"
