--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://aaltomcc.github.io/"
+baseURL = "https://aaltomcc.github.io/cs-ej4101-fall-2019-035-advanced/"
 languageCode = "en-us"
 title = "cs-ej4101-fall-2019-035-advanced"
 disableKinds = ["taxonomy", "taxonomyTerm"]
